--- a/index.html
+++ b/index.html
@@ -1,13 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>LinkedIn</title>
-</head>
-<body>
-	<a href="https://www.linkedin.com/in/akshita-mittal01/">Akshita Mittal (Member A)</a>
-	<a href="https://www.linkedin.com/in/anushka-agarwal1/">Anushka Agarwal (Member B)</a>
-	<a href="https://www.linkedin.com/in/pratham-khandelwal1320/">Pratham Khandelwal (Member C)</a>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Team Members</title>
+		<script src="https://cdn.tailwindcss.com"></script>
+	</head>
+
+	<body class="bg-gray-100 text-gray-900 font-sans">
+		<div class="container mx-auto my-10 p-5 bg-white rounded-lg shadow-lg">
+			<h1 class="text-3xl font-bold text-center mb-8">Our Team</h1>
+			<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+				<div
+					class="p-6 bg-gray-50 rounded-lg shadow hover:shadow-xl transition duration-300">
+					<h2 class="text-xl font-semibold mb-2">Akshita Mittal</h2>
+					<p class="mb-4 text-gray-600">Member A</p>
+					<a
+						href="https://www.linkedin.com/in/akshita-mittal01/"
+						class="text-blue-500 hover:text-blue-700 font-medium"
+						>LinkedIn Profile</a
+					>
+					<br />
+					<a
+						href="https://www.github.com/Akshi147/"
+						class="text-blue-500 hover:text-blue-700 font-medium"
+						>Github Profile</a
+					>
+				</div>
+				<div
+					class="p-6 bg-gray-50 rounded-lg shadow hover:shadow-xl transition duration-300">
+					<h2 class="text-xl font-semibold mb-2">Anushka Agarwal</h2>
+					<p class="mb-4 text-gray-600">Member B</p>
+					<a
+						href="https://www.linkedin.com/in/anushka-agarwal1/"
+						class="text-blue-500 hover:text-blue-700 font-medium"
+						>LinkedIn Profile</a
+					>
+					<br />
+					<a
+						href="https://www.github.com/anushka129/"
+						class="text-blue-500 hover:text-blue-700 font-medium"
+						>Github Profile</a
+					>
+				</div>
+				<div
+					class="p-6 bg-gray-50 rounded-lg shadow hover:shadow-xl transition duration-300">
+					<h2 class="text-xl font-semibold mb-2">Pratham Khandelwal</h2>
+					<p class="mb-4 text-gray-600">Member C</p>
+					<a
+						href="https://www.linkedin.com/in/pratham-khandelwal1320/"
+						class="text-blue-500 hover:text-blue-700 font-medium"
+						>LinkedIn Profile</a
+					>
+					<br />
+					<a
+						href="https://www.github.com/PrathamKhandelwal1301/"
+						class="text-blue-500 hover:text-blue-700 font-medium"
+						>Github Profile</a
+					>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
